--- a/flowchart.html
+++ b/flowchart.html
@@ -13,6 +13,13 @@
         <h1 id="flowchart-h1">Flowchart</h1>
         <p id="flowchart-red">Passcode: Perception</p>
       </div>
+      <div class="flowchart-img-con">
+        <img
+          id="flowchart-img"
+          src="/Assets/flowchart-img.svg"
+          alt="Picture of the flowchart"
+        />
+      </div>
     </section>
   </body>
 </html>
