--- a/start-here.html
+++ b/start-here.html
@@ -44,7 +44,7 @@
           and the time has come. What time? Well that all depends on one thing.
           What is time? You know what, just scratch that... Question for another
           time. Well either way, the alarm is ticking as i said. Aren´t you
-          going to turn it of?
+          going to turn it off?
         </p>
         <button class="btn-continue">Continue</button>
       </section>
