--- a/index.html
+++ b/index.html
@@ -11,13 +11,12 @@
     <section id="main">
       <h1 id="main-title">Me, Myself and I</h1>
       <div id="first-button">
-        <button class="home-btn" onclick="document.location='flowchart.html'">
-          Flowchart
-        </button>
+        <button class="home-btn" onclick="run()">Flowchart</button>
         <button class="home-btn" onclick="document.location='start-here.html'">
           Are you ready?
         </button>
       </div>
     </section>
+    <script src="/Javascript/flowchart-pass.js"></script>
   </body>
 </html>
