--- a/start-here.html
+++ b/start-here.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="Style/style.css" />
     <title>Me, Myself and I - Interactive Story</title>
+  </head>
     <body>
       <a href="index.html">
         <span>
@@ -36,8 +37,7 @@
       </a>
       <section class="choice-intro">
         <h1 id="choice-title">
-          "Lose an hour in the morning, and  you will be all day hunting for
-          it."
+          "Every morning you have two choices: Continue to sleep with your dreams, or wake up and chase them!"
         </h1>
         <p class="choice-text">
           The clock is ticking, your state of dreaming is slowly passing away,
@@ -46,7 +46,7 @@
           time. Well either way, the alarm is ticking as i said. Aren´t you
           going to turn it off?
         </p>
-        <button class="btn-continue">Continue</button>
+        <button class="btn-continue">Are we?</button>
       </section>
     </body>
   </head>
