--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Linking style sheet and Page title -->
     <link rel="stylesheet" href="Style/style.css" />
     <title>Me, Myself and I - Interactive Story</title>
   </head>
@@ -11,7 +12,8 @@
     <section id="main">
       <h1 id="main-title">Me, Myself and I</h1>
       <div id="first-button">
-        <button class="home-btn" onclick="run()">Flowchart</button>
+        <!-- Passcode for Flowchart  -->
+        <button class="home-btn" onclick="password()">Flowchart</button>
         <button class="home-btn" onclick="document.location='start-here.html'">
           Are you ready?
         </button>
