--- a/flowchart.html
+++ b/flowchart.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Linking style sheet and Page title -->
     <link rel="stylesheet" href="Style/style.css" />
     <title>Me, Myself and I - Interactive Story</title>
   </head>
   <body>
     <section id="flowchart">
+      <!-- Go back button -->
       <a href="index.html">
         <span>
           <svg
@@ -36,10 +38,12 @@
           </svg>
         </span>
       </a>
+      <!-- Main title -->
       <div class="flowchart-heading">
         <h1 id="flowchart-h1">Flowchart</h1>
         <p id="flowchart-red">Passcode: Perception</p>
       </div>
+      <!-- Flowchart image -->
       <div class="flowchart-img-con">
         <?xml version="1.0" encoding="utf-8"?>
         <svg
