--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         </button>
       </div>
     </section>
+    <!-- Passcode .js file -->
     <script src="/Javascript/flowchart-pass.js"></script>
   </body>
 </html>
