--- a/start-here.html
+++ b/start-here.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Linking style sheet and Page title -->
     <link rel="stylesheet" href="Style/style.css" />
     <title>Me, Myself and I - Interactive Story</title>
   </head>
     <body>
+      <!-- Go back button -->
       <a href="index.html">
         <span>
           <svg
@@ -35,6 +37,7 @@
           </svg>
         </span>
       </a>
+      <!-- Text container -->
       <section class="choice-intro">
         <h1 id="choice-title">
           "Every morning you have two choices: Continue to sleep with your dreams, or wake up and chase them!"
@@ -46,6 +49,7 @@
           time. Well either way, the alarm is ticking as i said. Aren´t you
           going to turn it off?
         </p>
+        <!-- Button to continue -->
         <button class="btn-continue">Are we?</button>
       </section>
     </body>
