--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
       </div>
     </section>
     <!-- Passcode .js file -->
+    <script src="/Javascript/StringContent.js"></script>
+    <script src="/Javascript/StringManupilation.js"></script>
     <script src="/Javascript/flowchart-pass.js"></script>
   </body>
 </html>
