--- a/start-here.html
+++ b/start-here.html
@@ -8,54 +8,53 @@
     <link rel="stylesheet" href="Style/style.css" />
     <title>Me, Myself and I - Interactive Story</title>
   </head>
-    <body>
-      <!-- Go back button -->
-      <a href="index.html">
-        <span>
-          <svg
-            class="go-back-btn"
-            version="1.1"
-            id="Layer_1"
-            xmlns="http://www.w3.org/2000/svg"
-            xmlns:xlink="http://www.w3.org/1999/xlink"
-            x="0px"
-            y="0px"
-            viewBox="0 0 512 512"
-            style="enable-background: new 0 0 512 512"
-            xml:space="preserve"
-          >
+  <body>
+    <!-- Go back button -->
+    <a href="index.html">
+      <span>
+        <svg
+          class="go-back-btn"
+          version="1.1"
+          id="Layer_1"
+          xmlns="http://www.w3.org/2000/svg"
+          xmlns:xlink="http://www.w3.org/1999/xlink"
+          x="0px"
+          y="0px"
+          viewBox="0 0 512 512"
+          style="enable-background: new 0 0 512 512"
+          xml:space="preserve"
+        >
+          <g>
             <g>
-              <g>
-                <path
-                  d="M288.502,32.502c-108.328,0-198.827,77.485-219.166,179.899l-42.482-53.107L0,180.784l68.769,85.961
+              <path
+                d="M288.502,32.502c-108.328,0-198.827,77.485-219.166,179.899l-42.482-53.107L0,180.784l68.769,85.961
 			            c3.352,4.178,8.338,6.447,13.427,6.447c2.596,0,5.226-0.585,7.685-1.805l103.153-51.577l-15.387-30.757l-75.8,37.892
 			            c14.063-90.5,92.27-160.059,186.655-160.059c104.271,0,189.114,84.843,189.114,189.114s-84.843,189.114-189.114,189.114v34.384
 			            C411.735,479.498,512,379.233,512,256S411.735,32.502,288.502,32.502z"
-                />
-              </g>
+              />
             </g>
-          </svg>
-        </span>
-      </a>
-      <!-- Text container -->
-      <section class="start-intro">
-        <h1 id="start-title">
-          "Every morning you have two choices: Continue to sleep with your dreams, or wake up and chase them!"
-        </h1>
-        <p class="start-text">
-          The clock is ticking, your state of dreaming is slowly passing away,
-          and the time has come. What time? Well that all depends on one thing.
-          What is time? You know what, just scratch that... Question for another
-          time. Well either way, the alarm is ticking as i said. Aren´t you
-          going to turn it off?
-        </p>
-        <button class="btn-continue" onclick="startChoice()">Are we?</button>
-        <div class="choices-btns">
-          <button id="1" class="choice"></button>
-          <button id="2" class="choice"></button>
-        </div>
-      </section>
-      <script src="/Javascript/choices-btn.js"></script>
-    </body>
-  </head>
+          </g>
+        </svg>
+      </span>
+    </a>
+    <!-- Text container -->
+    <section id="start-intro">
+      <h1 id="start-title">
+        "Every morning you have two choices: Continue to sleep with your dreams,
+        or wake up and chase them!"
+      </h1>
+      <p class="start-text">
+        The clock is ticking, your state of dreaming is slowly passing away, and
+        the time has come. What time? Well that all depends on one thing. What
+        is time? You know what, just scratch that... Question for another time.
+        Well either way, the alarm is ticking as i said. Aren´t you going to
+        turn it off?
+      </p>
+      <button class="btn-continue" onclick="manipluationStart()">
+        Are we?
+      </button>
+    </section>
+    <script src="/Javascript/StringContent.js"></script>
+    <script src="/Javascript/StringManupilation.js"></script>
+  </body>
 </html>
