Snooze path finished

--- a/start-here.html
+++ b/start-here.html
@@ -50,7 +50,7 @@
         Well either way, the alarm is ticking as i said. Aren´t you going to
         turn it off?
       </p>
-      <button class="btn-continue" onclick="manipluationStart()">
+      <button class="btn-continue" onclick="manipulationStart()">
         Are we?
       </button>
     </section>
