Adding red text

--- a/start-here.html
+++ b/start-here.html
@@ -40,8 +40,8 @@
     <!-- Text container -->
     <section id="start-intro">
       <h1 id="start-title">
-        "Every morning you have two choices: Continue to sleep with your dreams,
-        or wake up and chase them!"
+        "Every morning you have two choices: Continue to sleep with your
+        <span class="span-title">dreams</span>, or wake up and chase them!"
       </h1>
       <p class="start-text">
         The clock is ticking, your state of dreaming is slowly passing away, and
