--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <section id="main">
-      <h1 id="main-title">Me, Myself and I</h1>
+      <h1 id="main-title">Me, myself and I</h1>
       <div id="first-button">
         <!-- Passcode for Flowchart  -->
         <button class="home-btn" onclick="password()">Flowchart</button>
@@ -23,5 +23,6 @@
     <script src="/Javascript/StringContent.js"></script>
     <script src="/Javascript/StringManupilation.js"></script>
     <script src="/Javascript/flowchart-pass.js"></script>
+    <script src="/Javascript/anim.js"></script>
   </body>
 </html>
