--- a/start-here.html
+++ b/start-here.html
@@ -56,5 +56,6 @@
     </section>
     <script src="/Javascript/StringContent.js"></script>
     <script src="/Javascript/StringManupilation.js"></script>
+    <script src="/Javascript/animation.js"></script>
   </body>
 </html>
