Adding noise background

--- a/flowchart.html
+++ b/flowchart.html
@@ -10,6 +10,7 @@
   </head>
   <body>
     <section id="flowchart">
+      <div class="bg"></div>
       <!-- Go back button -->
       <a href="index.html">
         <span>
