--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   </head>
   <body>
     <section id="main">
+      <div class="bg"></div>
       <h1 id="main-title">Me, myself and I</h1>
       <div id="first-button">
         <!-- Passcode for Flowchart  -->
