--- a/start-here.html
+++ b/start-here.html
@@ -9,6 +9,7 @@
     <title>Me, Myself and I - Interactive Story</title>
   </head>
   <body>
+    <div class="bg"></div>
     <!-- Go back button -->
     <a href="index.html">
       <span>
