Noise effect different

--- a/flowchart.html
+++ b/flowchart.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <section id="flowchart">
-      <div class="bg"></div>
+      <div class="bg-4"></div>
       <!-- Go back button -->
       <a href="index.html">
         <span>
