--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <title>Me, Myself and I - Interactive Story</title>
   </head>
   <body>
+    <div class="bg-1"></div>
     <section id="main">
-      <div class="bg"></div>
       <h1 id="main-title">Me, myself and I</h1>
       <div id="first-button">
         <!-- Passcode for Flowchart  -->
@@ -24,6 +24,5 @@
     <script src="/Javascript/StringContent.js"></script>
     <script src="/Javascript/StringManupilation.js"></script>
     <script src="/Javascript/flowchart-pass.js"></script>
-    <script src="/Javascript/anim.js"></script>
   </body>
 </html>
