--- a/start-here.html
+++ b/start-here.html
@@ -9,7 +9,6 @@
     <title>Me, Myself and I - Interactive Story</title>
   </head>
   <body>
-    <div class="bg"></div>
     <!-- Go back button -->
     <a href="index.html">
       <span>
@@ -40,6 +39,7 @@
     </a>
     <!-- Text container -->
     <section id="start-intro">
+      <div class="bg-1"></div>
       <h1 id="start-title">
         "Every morning you have two choices: Continue to sleep with your
         <span class="span-title">dreams</span>, or wake up and chase them!"
